# HonoursProject

./: .gitignore  CMakeLists.txt  README.md  cameraDemo.cpp  runTLD.cpp  vidDemo.cpp  videoHandler.hpp
kcfSrc/: CMakeLists.txt  kcf.cpp  kcfTracker.cpp  kcfTracker.hpp
kcfSrc/piotr_fhog/: gradientMex.cpp
src/libkcf/: CMakeLists.txt  KCFTracker.cpp  KCFTracker.h  kcf.cpp  kcf.h
src/libkcf/cn/: CMakeLists.txt
src/libkcf/piotr_fhog/: CMakeLists.txt
src/libmultitrack/: CMakeLists.txt
src/libmultitrack/tld/: CFClassifier.cpp  CFClassifier.h  Clustering.h  DetectionResult.cpp  DetectionResult.h  Detector.cpp  Detector.h  DetectorCascade.cpp  DetectorCascade.h  DnnFilter.cpp  DnnFilter.h  EnsembleClassifier.cpp  EnsembleClassifier.h  FaceFilter.cpp  FaceFilter.h  MultiTrack.cpp  MultiTrack.h  NNClassifier.cpp  NNClassifier.h  Patch.h  TLDUtil.cpp  TLDUtil.h  VarianceFilter.cpp  VarianceFilter.h  precomp.hpp
src/libopentld/: CMakeLists.txt
src/libopentld/tld/: EnsembleClassifier.cpp  TLD.cpp  TLD.h
src/opentld/: CMakeLists.txt
src/testVid/: CMakeLists.txt  calculateData.py  fixedLabels.txt  multitest.cpp  output.txt  runTLD.cpp  vidDemo.cpp  videoHandler.hpp
tldSrc/: CMakeLists.txt  tldDetector.cpp  tldDetector.hpp  tldEnsembleClassifier.cpp  tldEnsembleClassifier.hpp  tldModel.cpp  tldModel.hpp  tldTracker.cpp  tldTracker.hpp  tldUtils.hpp  trackerMedianFlow.cpp
tracking/: CMakeLists.txt  tracking.hpp
